--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 {
     "installer": {
-        "username": "admin",
-        "password": "teste12"
+        "username": "Maycondouglas1702",
+        "password": "goias41413254"
     },
     "settings": {
         "name": "devShort shortlink service",
